[package]
name = "z4-bevy"
version = "0.1.0"
edition = "2021"

[features]
default = ["wasm"]
ws = ["tdn-bevy/ws"]
p2p = ["tdn-bevy/p2p"]
wasm = ["tdn-bevy/wasm"]

[dependencies]
bevy = { version = "0.13", default-features = false }
serde = "1.0"
serde_json = "1.0"
tdn_types = { version = "0.10", default-features = false, features = ["multiple"] }
tdn-bevy = { version = "0.1", default-features = false }

[dev-dependencies]
bevy = "0.13"
